# my_project

./: .gitignore  .pre-commit-config.yaml  APP_OVERVIEW.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.lambda  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260713_0001_create_users.py  20260714_0002_add_dataset_metadata_and_customer_identity.py
backend/data/: README.md
backend/src/boutique/: __init__.py  config.py  lambda_handler.py  main.py  migration_handler.py
backend/src/boutique/application/: __init__.py
backend/src/boutique/application/auth/: interfaces.py  use_cases.py
backend/src/boutique/application/common/: __init__.py
backend/src/boutique/application/dashboard/: __init__.py  cache_keys.py  interfaces.py  use_cases.py
backend/src/boutique/application/dataset/: __init__.py  interfaces.py  ports.py  use_cases.py
backend/src/boutique/application/health/: __init__.py  interfaces.py  use_cases.py
backend/src/boutique/application/orders/: __init__.py  interfaces.py  use_cases.py
backend/src/boutique/bootstrap/: container.py
backend/src/boutique/commands/: __init__.py  seed_olist.py
backend/src/boutique/domain/: __init__.py  ids.py
backend/src/boutique/infrastructure/: __init__.py  observability.py
backend/src/boutique/presentation/: __init__.py
backend/tests/fakes/: unit_of_work.py
backend/tests/integration/: test_http_api.py
backend/tests/unit/: test_config.py  test_migration_handler.py
docs/: cloud-deployment.md  (+2 more)
(+113 files in other folders)
