[project]
name = "boutique-api"
version = "0.1.0"
description = "Backend API for the programming assessment dashboard"
requires-python = ">=3.13,<3.15"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.0",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.0",
    "argon2-cffi>=23.1.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.0",
    "posthog>=3.7.0",
    "redis[hiredis]>=5.2.0",
    "sentry-sdk[fastapi]>=2.20.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "structlog>=24.4.0",
    "mangum>=0.21.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boutique"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
markers = [
    "unit: isolated domain or application test",
    "integration: requires a real external adapter",
]
